2009-04-10  Don Porter  <dgp@users.sourceforge.net>

	* tests/httpd:		Backport new tests for http 2.7.3.
	* tests/http.tcl:

2008-04-09  Kevin B. Kenny  <kennykb@acm.org>

	* tools/tclZIC.tcl:	Always emit Unix-style line terminators.
	* library/tzdata:	Olson's tzdata2009e.
	
2009-04-09  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Backport http 2.7.3 from HEAD for
	* library/http/pkgIndex.tcl:	bundling with the Tcl 8.5.7 release.
	* unix/Makefile.in:
	* win/Makefile.in:

2009-04-08  Andreas Kupries  <andreask@activestate.com>

	* library/platform/platform.tcl: Extended the darwin sections to
	* library/platform/pkgIndex.tcl: add a kernel version number to
	* unix/Makefile.in: the identifier for anything from Leopard (10.5)
	* win/Makefile.in: on up. Extended patterns for same. Extended cpu
	* doc/platform.n: recognition for 64bit Tcl running on a 32bit
	kernel on a 64bit processor (By Daniel Steffen). Bumped version to
	1.0.4. Updated Makefiles.

2009-04-08  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	Converted [eval]s (some unsafe!) to
	* library/tcltest/pkgIndex.tcl:	{*} in tcltest package.  [Bug 2570363]
	* unix/Makefile.in:	=> tcltest 2.3.1
	* win/Makefile.in:

2009-04-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Completed backports of fixes for
	[Bug 2494093] and [Bug 2553906].

2009-03-30  Don Porter  <dgp@users.sourceforge.net>

	* doc/Alloc.3:  Size argument is "unsigned int".  [Bug 2556263]

	* generic/tclStringObj.c:       Added protections from invalid memory
	* generic/tclTestObj.c:         accesses when we append (some part of)
	* tests/stringObj.test:         a Tcl_Obj to itself.  Added the
	appendself and appendself2 subcommands to the [teststringobj] testing
	command and added tests to the test suite.  [Bug 2603158]

2009-03-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c (TclPathPart):	TclPathPart() was computing